--- a/src/main/resources/datasets/jedi.yml
+++ b/src/main/resources/datasets/jedi.yml
@@ -1,7 +1,7 @@
 jedis:
   - id: 1
-    name: "HanSolo"
-    strength: 50
+    name: "Obi-Wan Kenobi"
+    strength: 100
     version: 1
   - id: 2
     name: "Luke Skywalker"
@@ -10,6 +10,10 @@ jedis:
   - id: 3
     name: "Yoda"
     strength: 500
+    version: 1
+  - id: 4
+    name: "HanSolo"
+    strength: 50
     version: 1
 
 #o yml é um arquivo de configuração, para variáveis de ambiente e mapeamento de infos
